--- a/ex2/app/src/main/res/layout/activity_first.xml
+++ b/ex2/app/src/main/res/layout/activity_first.xml
@@ -26,7 +26,7 @@
         android:id="@+id/button_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="singleTop"
+        android:text="Button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
