--- a/ex2/app/src/main/res/layout/activity_second.xml
+++ b/ex2/app/src/main/res/layout/activity_second.xml
@@ -17,4 +17,15 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="29dp" />
 
+    <Button
+        android:id="@+id/button_3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_2"
+        app:layout_constraintVertical_bias="0.018" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
