--- a/ex2/app/src/main/res/layout/activity_third.xml
+++ b/ex2/app/src/main/res/layout/activity_third.xml
@@ -10,7 +10,7 @@
         android:id="@+id/button_3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/singletask"
+        android:text="button3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.244"
