--- a/ex3/app/src/main/res/layout/fruit_item.xml
+++ b/ex3/app/src/main/res/layout/fruit_item.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="5dp">
 
-    <TextView
-        android:id="@+id/fruit_no"
-        android:layout_width="199dp"
-        android:layout_height="wrap_content"
-        android:text="2"
-        android:textSize="16sp" />
+<!--    <TextView-->
+<!--        android:id="@+id/fruit_no"-->
+<!--        android:layout_width="199dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="2"-->
+<!--        android:textSize="16sp" />-->
 
     <ImageView
         android:id="@+id/fruit_image"
