--- a/ex10/app/src/main/res/layout/activity_main.xml
+++ b/ex10/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stop_service" />
 
+    <Button
+        android:id="@+id/bind_service"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="84dp"
+        android:text="Bind Service"
+        app:layout_constraintTop_toBottomOf="@+id/start_intent_service"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/unbind_service"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Unbind Service"
+        app:layout_constraintTop_toBottomOf="@+id/bind_service"
+        tools:layout_editor_absoluteX="0dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
